# vme

./: Makefile  README.md  all-in-one  pyproject.toml  vme.py
env/: petal.freeze  petal.json
vme/: __init__.py  __main__.py
