[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vme"
version = "0.0.1"
authors = [
  { name="Sun Yijiang", email="sunyijiang@gmail.com" },
]
description = "WeChat Work Message Bot."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/sunyj/vme"
"Bug Tracker" = "https://github.com/sunyj/vme/issues"
